...
                imageVector = Icons.Default.Search,
                contentDescription = stringResource(Res.string.search_cd_icon),
            )
        },
        modifier = Modifier
            .fillMaxWidth()
            .testTag("search_bar")
            .padding(12.dp),
    )
}

@Composable
private fun SearchEmptyContent() {
...
